--- a/analysis/runs/controller_odd.ipynb
+++ b/analysis/runs/controller_odd.ipynb
@@ -46,10 +46,10 @@
     "DO_CHECK = False\n",
     "\n",
     "# User inputs\n",
-    "N_TREES_LIST = [x.item() for x in np.arange(21,82,2)]  # List of N_trees to run\n",
+    "N_TREES_LIST = [x.item() for x in np.arange(137,201,2)]  # List of N_trees to run\n",
     "N_PROCESSES = 2 if kgs.env=='local' else 4  # Maximum concurrent processes\n",
     "DIAGNOSTIC_INTERVAL = 120  # Seconds between diagnostic updates\n",
-    "SEED_LIST = [130,131,132,133]  # Base seed for reproducibility\n",
+    "SEED_LIST = [130]  # Base seed for reproducibility\n",
     "\n",
     "# Derived inputs (edit manually to customize seeds per task)\n",
     "N_TREES_SEED_LIST = [(N, SEED) for SEED in SEED_LIST for N in N_TREES_LIST]\n",
@@ -133,8 +133,8 @@
     "           runner.ga.ga_base.initializer.ref_sol = ref_sols[N_trees]\n",
     "        assert runner.ga.ga_base.initializer.ref_sol is not None      \n",
     "           \n",
-    "        if N_trees>=190:\n",
-    "            runner.n_generations = 1000\n",
+    "        #if N_trees>=190:\n",
+    "        #    runner.n_generations = 1000\n",
     "        # if N_trees in [58,60,62,78]:\n",
     "        #     runner.ga.ga_base.initializer.ref_sol_axis2_offset = 0.\n",
     "        # else:\n",
@@ -802,7 +802,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "rapids-25.10",
+   "display_name": "Python3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -816,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.10"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
