--- a/analysis/runs/controller_odd.ipynb
+++ b/analysis/runs/controller_odd.ipynb
@@ -548,7 +548,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python3 (ipykernel)",
+   "display_name": "rapids-25.10",
    "language": "python",
    "name": "python3"
   },
@@ -562,7 +562,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.12"
+   "version": "3.13.10"
   }
  },
  "nbformat": 4,
