--- a/analysis/test_legalize2.ipynb
+++ b/analysis/test_legalize2.ipynb
@@ -24,21 +24,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 21.047 ms\n",
+      "ptxas info    : Compile time = 15.035 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 826.495 ms\n",
+      "ptxas info    : Compile time = 755.686 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 152 registers, used 1 barriers, 2144 bytes cumulative stack size, 424 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 498.863 ms\n",
+      "ptxas info    : Compile time = 489.376 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -57,21 +57,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.176 ms\n",
+      "ptxas info    : Compile time = 13.140 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 893.877 ms\n",
+      "ptxas info    : Compile time = 766.554 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    2080 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 126 registers, used 1 barriers, 2080 bytes cumulative stack size, 424 bytes cmem[0], 136 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 108.941 ms\n",
+      "ptxas info    : Compile time = 107.809 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -90,21 +90,21 @@
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 14.998 ms\n",
+      "ptxas info    : Compile time = 15.641 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 886.843 ms\n",
+      "ptxas info    : Compile time = 773.600 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    336 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 92 registers, used 1 barriers, 336 bytes cumulative stack size, 424 bytes cmem[0], 144 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 110.167 ms\n",
+      "ptxas info    : Compile time = 116.352 ms\n",
       "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "\n",
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5f1eea65",
    "metadata": {},
    "outputs": [
@@ -733,15 +733,24 @@
     "        else:\n",
     "            return legalize(solx, do_plot=do_plot, move_factor=move_factor, tolerance_rel_change=0., stop_on_cost_increase=stop_on_cost_increase, n_iter=n_iter, target=target, validate=validate)\n",
     "\n",
-    "sol2 = pack_io.legalize(sol, do_plot = True, validate=True, target = 1e-20, n_iter = 100, tolerance_rel_change=1e-10, line_search = True)"
+    "sol2 = pack_io.legalize(sol, do_plot = True, validate=True, target = 1e-20, n_iter = 100, tolerance_rel_change=1e-10, line_search = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5419ef13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score of generated dataframe: 0.3998863152828664\n",
+      "Score of generated dataframe: 0.3998713607465797\n"
+     ]
+    }
+   ],
    "source": [
     "pack_io.solution_list_to_dataframe([sol], compact=True);\n",
     "pack_io.solution_list_to_dataframe([sol2], compact=True);"
@@ -749,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "d7422298",
    "metadata": {},
    "outputs": [
@@ -759,6 +768,14 @@
      "text": [
       "Starting binary search from h=1.673105\n",
       "Iteration 1/50:\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/mnt/d/packing/code/analysis/../core/pack_dynamics.py:113: UserWarning: Data has no positive values, and therefore cannot be log-scaled.\n",
+      "  ax.set_yscale('log')\n"
      ]
     },
     {
@@ -1125,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "id": "2e0e1e52",
    "metadata": {},
    "outputs": [
@@ -1150,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "74838016",
    "metadata": {},
    "outputs": [
