--- a/analysis/legalize.ipynb
+++ b/analysis/legalize.ipynb
@@ -75,30 +75,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aeb2a935",
    "metadata": {},
    "outputs": [
     {
-     "ename": "CUDARuntimeError",
-     "evalue": "cudaErrorInitializationError: initialization error",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mRemoteTraceback\u001b[39m                           Traceback (most recent call last)",
-      "\u001b[31mRemoteTraceback\u001b[39m: \n\"\"\"\nTraceback (most recent call last):\n  File \"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/multiprocessing/pool.py\", line 125, in worker\n    result = (True, func(*args, **kwds))\n                    ~~~~^^^^^^^^^^^^^^^\n  File \"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/multiprocessing/pool.py\", line 48, in mapstar\n    return list(map(*args))\n  File \"/tmp/ipykernel_22799/1171548558.py\", line 5, in find_legalized\n    kgs.set_float32(False)\n    ~~~~~~~~~~~~~~~^^^^^^^\n  File \"/mnt/d/packing/code/analysis/../core/kaggle_support.py\", line 96, in set_float32\n    initialize_tree_globals()\n    ~~~~~~~~~~~~~~~~~~~~~~~^^\n  File \"/mnt/d/packing/code/analysis/../core/kaggle_support.py\", line 366, in initialize_tree_globals\n    tree_vertices = cp.array(np.array(center_tree.exterior.coords[:-1]), dtype=dtype_cp)  # (n_vertices, 2)\n  File \"/home/jcottaar/miniconda3/envs/rapids-25.10/lib/python3.13/site-packages/cupy/_creation/from_data.py\", line 53, in array\n    return _core.array(obj, dtype, copy, order, subok, ndmin, blocking)\n           ~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n  File \"cupy/_core/core.pyx\", line 2502, in cupy._core.core.array\n  File \"cupy/_core/core.pyx\", line 2529, in cupy._core.core.array\n  File \"cupy/_core/core.pyx\", line 2740, in cupy._core.core._array_default\n  File \"cupy/_core/core.pyx\", line 167, in cupy._core.core.ndarray.__new__\n  File \"cupy/_core/core.pyx\", line 254, in cupy._core.core._ndarray_base._init\n  File \"cupy/cuda/memory.pyx\", line 875, in cupy.cuda.memory.alloc\n  File \"cupy/cuda/memory.pyx\", line 1579, in cupy.cuda.memory.MemoryPool.malloc\n  File \"cupy/cuda/memory.pyx\", line 1599, in cupy.cuda.memory.MemoryPool.malloc\n  File \"cupy/cuda/device.pyx\", line 40, in cupy.cuda.device.get_device_id\n  File \"cupy_backends/cuda/api/runtime.pyx\", line 202, in cupy_backends.cuda.api.runtime.getDevice\n  File \"cupy_backends/cuda/api/runtime.pyx\", line 146, in cupy_backends.cuda.api.runtime.check_status\ncupy_backends.cuda.api.runtime.CUDARuntimeError: cudaErrorInitializationError: initialization error\n\"\"\"",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[31mCUDARuntimeError\u001b[39m                          Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 8\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[34m__name__\u001b[39m == \u001b[33m'\u001b[39m\u001b[33m__main__\u001b[39m\u001b[33m'\u001b[39m:\n\u001b[32m      5\u001b[39m     \u001b[38;5;66;03m# Create a pool of 10 workers\u001b[39;00m\n\u001b[32m      6\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m mp.Pool(processes=\u001b[32m10\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m pool:\n\u001b[32m      7\u001b[39m         \u001b[38;5;66;03m# Run find_legalized for N=1 to 200 in parallel\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m8\u001b[39m         \u001b[43mpool\u001b[49m\u001b[43m.\u001b[49m\u001b[43mmap\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfind_legalized\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mrange\u001b[39;49m\u001b[43m(\u001b[49m\u001b[32;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m201\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     10\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAll legalizations completed!\u001b[39m\u001b[33m\"\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/rapids-25.10/lib/python3.13/multiprocessing/pool.py:367\u001b[39m, in \u001b[36mPool.map\u001b[39m\u001b[34m(self, func, iterable, chunksize)\u001b[39m\n\u001b[32m    362\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mmap\u001b[39m(\u001b[38;5;28mself\u001b[39m, func, iterable, chunksize=\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[32m    363\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m'''\u001b[39;00m\n\u001b[32m    364\u001b[39m \u001b[33;03m    Apply `func` to each element in `iterable`, collecting the results\u001b[39;00m\n\u001b[32m    365\u001b[39m \u001b[33;03m    in a list that is returned.\u001b[39;00m\n\u001b[32m    366\u001b[39m \u001b[33;03m    '''\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m367\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_map_async\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43miterable\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmapstar\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mchunksize\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~/miniconda3/envs/rapids-25.10/lib/python3.13/multiprocessing/pool.py:774\u001b[39m, in \u001b[36mApplyResult.get\u001b[39m\u001b[34m(self, timeout)\u001b[39m\n\u001b[32m    772\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._value\n\u001b[32m    773\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m774\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m._value\n",
-      "\u001b[31mCUDARuntimeError\u001b[39m: cudaErrorInitializationError: initialization error"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "local\n",
+      "local\n",
+      "WARNING: CUDA MPS not active\n",
+      "WARNING: CUDA MPS not active\n",
+      "local\n",
+      "local\n",
+      "local\n",
+      "local\n",
+      "local\n",
+      "local\n",
+      "WARNING: CUDA MPS not active\n",
+      "WARNING: CUDA MPS not active\n",
+      "local\n",
+      "WARNING: CUDA MPS not active\n",
+      "WARNING: CUDA MPS not active\n",
+      "WARNING: CUDA MPS not active\n",
+      "WARNING: CUDA MPS not active\n",
+      "WARNING: CUDA MPS not active\n",
+      "local\n",
+      "WARNING: CUDA MPS not active\n",
+      "1: Considering 7 solutions\n",
+      "init CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling kernel variant: crystal ===\n",
+      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_23522.cu -o /mnt/d//packing/temp/pack_cuda_crystal_23522.cubin\n",
+      "6: Considering 6 solutions\n",
+      "init CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling kernel variant: crystal ===\n",
+      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_23526.cu -o /mnt/d//packing/temp/pack_cuda_crystal_23526.cubin\n",
+      "11: Considering 6 solutions\n",
+      "init CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling kernel variant: crystal ===\n",
+      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_23523.cu -o /mnt/d//packing/temp/pack_cuda_crystal_23523.cubin\n",
+      "16: Considering 7 solutions\n",
+      "init CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling kernel variant: crystal ===\n",
+      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_23524.cu -o /mnt/d//packing/temp/pack_cuda_crystal_23524.cubin\n",
+      "21: Considering 6 solutions\n",
+      "init CUDA\n",
+      "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
+      "GPU max threads per block: 1024\n",
+      "=== Compiling kernel variant: crystal ===\n",
+      "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_23525.cu -o /mnt/d//packing/temp/pack_cuda_crystal_23525.cubin\n",
+      "ptxas info    : 144 bytes gmem, 2324 bytes cmem[3], 8 bytes cmem[4]\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
+      "    88 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 38 registers, used 1 barriers, 88 bytes cumulative stack size, 404 bytes cmem[0], 120 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 18.522 ms\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_boundary_list_total\n",
+      "    528 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 68 registers, used 1 barriers, 528 bytes cumulative stack size, 404 bytes cmem[0], 152 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 1661.552 ms\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
+      "ptxas info    : Function properties for multi_overlap_list_total\n",
+      "    2144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 152 registers, used 1 barriers, 2144 bytes cumulative stack size, 424 bytes cmem[0], 136 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 1126.154 ms\n",
+      "ptxas info    : Function properties for __internal_trig_reduction_slowpathd\n",
+      "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "\n",
+      "\n",
+      "--- Kernel: multi_overlap_list_total [crystal] ---\n",
+      "  Max threads per block (kernel): 384\n",
+      "  Num registers: 152\n",
+      "  Shared memory (bytes): 0\n",
+      "  Const memory (bytes): 2324\n",
+      "  Local memory (bytes): 2144\n",
+      "=== Compiling kernel variant: no_sep ===\n",
+      "Defines: ENABLE_OVERLAP_AREA\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved_23522.cu -o /mnt/d//packing/temp/pack_cuda_no_sep_23522.cubin\n"
      ]
     }
    ],
    "source": [
     "# Run legalize for N=1 to 200\n",
-    "import multiprocessing as mp\n",
+    "import multiprocess as mp\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    # Create a pool of 10 workers\n",
@@ -108,6 +186,14 @@
     "    \n",
     "    print(\"All legalizations completed!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dc3e0907",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
