--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "743f2f43",
    "metadata": {},
    "outputs": [
@@ -18,89 +18,89 @@
       "GPU max threads per block: 1024\n",
       "=== Compiling kernel variant: crystal ===\n",
       "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_143458.cu -o /mnt/d//packing/temp/pack_cuda_crystal_143458.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_60379.cu -o /mnt/d//packing/temp/pack_cuda_crystal_60379.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 9.581 ms\n",
+      "ptxas info    : Compile time = 22.796 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 398.694 ms\n",
+      "ptxas info    : Used 40 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 24 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 489.232 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 80 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 346.989 ms\n",
+      "ptxas info    : Used 96 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 934.148 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
-      "  Max threads per block (kernel): 768\n",
-      "  Num registers: 80\n",
+      "  Max threads per block (kernel): 640\n",
+      "  Num registers: 96\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 1172\n",
       "  Local memory (bytes): 1264\n",
       "=== Compiling kernel variant: no_sep ===\n",
       "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved_143458.cu -o /mnt/d//packing/temp/pack_cuda_no_sep_143458.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved_60379.cu -o /mnt/d//packing/temp/pack_cuda_no_sep_60379.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.144 ms\n",
+      "ptxas info    : Compile time = 8.643 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 382.065 ms\n",
+      "ptxas info    : Used 40 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 24 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 454.798 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 64 registers, used 1 barriers, 1232 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 67.845 ms\n",
+      "ptxas info    : Used 75 registers, used 1 barriers, 1232 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 155.139 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
-      "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 64\n",
+      "  Max threads per block (kernel): 768\n",
+      "  Num registers: 75\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 1172\n",
       "  Local memory (bytes): 1232\n",
       "=== Compiling kernel variant: sep ===\n",
       "Defines: ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_143458.cu -o /mnt/d//packing/temp/pack_cuda_sep_143458.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_60379.cu -o /mnt/d//packing/temp/pack_cuda_sep_60379.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.064 ms\n",
+      "ptxas info    : Compile time = 8.470 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 43 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 394.345 ms\n",
+      "ptxas info    : Used 40 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 24 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 462.939 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
-      "    144 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
-      "ptxas info    : Used 56 registers, used 1 barriers, 144 bytes cumulative stack size, 424 bytes cmem[0], 40 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 2429.551 ms\n",
+      "    160 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
+      "ptxas info    : Used 64 registers, used 1 barriers, 160 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
+      "ptxas info    : Compile time = 164.805 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
       "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 56\n",
+      "  Num registers: 64\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 1172\n",
-      "  Local memory (bytes): 144\n",
+      "  Local memory (bytes): 160\n",
       "\n",
       "--- Kernel: multi_boundary_list_total ---\n",
       "  Max threads per block (kernel): 1024\n",
-      "  Num registers: 43\n",
+      "  Num registers: 40\n",
       "  Shared memory (bytes): 0\n",
       "  Const memory (bytes): 1172\n",
       "  Local memory (bytes): 240\n",
@@ -133,7 +133,7 @@
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 48 registers, used 1 barriers, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 11.848 ms\n",
+      "ptxas info    : Compile time = 12.731 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 48\n",
@@ -143,28 +143,28 @@
       "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
       "GPU max threads per block: 1024\n",
       "=== Compiling LAP kernels ===\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved_143458.cu -o /mnt/d//packing/temp/lap_batch_143458.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved_60379.cu -o /mnt/d//packing/temp/lap_batch_60379.cubin\n",
       "ptxas info    : 0 bytes gmem\n",
       "ptxas info    : Compiling entry function 'diversity_shortcut_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 9.545 ms\n",
+      "ptxas info    : Compile time = 11.036 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.001 ms\n",
+      "ptxas info    : Compile time = 3.099 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 6.869 ms\n",
+      "ptxas info    : Compile time = 6.984 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 14.907 ms\n",
+      "ptxas info    : Compile time = 15.949 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -402,17 +402,17 @@
       "Testing CollisionCostSeparation\n",
       "[0.8244702]\n",
       "[0.8244710444206882]\n",
-      "[6.714794]\n",
+      "[6.7147923]\n",
       "[6.7147939560694105]\n",
-      "[4.105867]\n",
+      "[4.1058674]\n",
       "[4.105868460384864]\n",
-      "[5.05859]\n",
+      "[5.058589]\n",
       "[5.058591746271536]\n",
       "[0.14144647]\n",
       "[0.14144643480625813]\n",
       "[3.9452562]\n",
       "[3.945255729561956]\n",
-      "[2.7107687]\n",
+      "[2.7107682]\n",
       "[2.7107683021439404]\n",
       "[3.1487665]\n",
       "[3.148766349585172]\n",
@@ -464,13 +464,13 @@
       "[3.789965582031825]\n",
       "[2.146739]\n",
       "[2.1467398140715064]\n",
-      "[2.6367326]\n",
+      "[2.6367323]\n",
       "[2.6367332253648272]\n",
-      "[0.039698083]\n",
+      "[0.039698087]\n",
       "[0.03969808876667014]\n",
-      "[1.8159051]\n",
+      "[1.8159052]\n",
       "[1.815904948030701]\n",
-      "[1.2309796]\n",
+      "[1.2309797]\n",
       "[1.2309794244696337]\n",
       "[1.5046461]\n",
       "[1.504646080872017]\n",
@@ -488,7 +488,7 @@
       "Testing CostCompound\n",
       "[0.62234104]\n",
       "[0.6223413133262065]\n",
-      "[2.3894382]\n",
+      "[2.3894377]\n",
       "[2.389438186820823]\n",
       "[1.6067601]\n",
       "[1.6067605381154593]\n",
@@ -497,7 +497,45 @@
       "[1.3955986]\n",
       "[1.3955986238550628]\n",
       "[1.4091043]\n",
-      "[1.4091041677707845]\n"
+      "[1.4091041677707845]\n",
+      "[1.1257305]\n",
+      "[1.1257304906431822]\n",
+      "[1.2146299]\n",
+      "[1.2146299048755518]\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.5   0.2   0.4 ]\n",
+      " [ 2.   -0.1  -0.15]]\n",
+      "[1.60676054 7.51757752]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "  Vectorized check for CostCompound\n",
+      "[[ 0.83333333  1.25        1.04719755]\n",
+      " [-0.41666667  0.41666667  1.04719755]]\n",
+      "[1.39559862 1.40910417]\n",
+      "  ✓ Vectorized results exactly match individual calls\n",
+      "=== Testing line_intersection ===\n",
+      "=== Compiling CUDA Primitives Test Kernels ===\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math -arch=sm_89 -ptx /tmp/pack_cuda_primitives_test/primitives_test.cu -o /tmp/pack_cuda_primitives_test/primitives_test.ptx\n",
+      "Compilation successful!\n",
+      "Initialization complete!\n",
+      "Testing 29 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 29 cases passed, max gradient error: 1.64e-08\n",
+      "\n",
+      "✓ All gradients match finite differences!\n",
+      "✓ line_intersection test PASSED\n",
+      "\n",
+      "=== Testing clip_against_edge ===\n",
+      "Testing 13 cases...\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All test cases passed, max gradient error: 7.32e-10\n",
+      "✓ clip_against_edge test PASSED\n",
+      "\n",
+      "=== Testing polygon_area ===\n",
+      "✓ Forward results match with and without gradients\n",
+      "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
+      "✓ polygon_area test PASSED\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x71a64e790b40>\n",
+      "All tests passed.\n"
      ]
     }
    ],
@@ -515,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "4b102228",
    "metadata": {},
    "outputs": [
@@ -535,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "599dea53",
    "metadata": {},
    "outputs": [
