--- a/analysis/legalize.ipynb
+++ b/analysis/legalize.ipynb
@@ -48,7 +48,7 @@
     "            print(f\"{N_trees}: Legalized solution already exists. Loading from file.\")\n",
     "            return kgs.dill_load(fname)\n",
     "        kgs.set_float32(False)\n",
-    "        kgs.TREE_EXPANSION = kgs.TREE_EXPANSION**2\n",
+    "        kgs.TREE_EXPANSION = (20*(1.000001-1))**2\n",
     "        kgs.initialize_tree_globals()\n",
     "        xyt_list = kgs.dill_load(kgs.code_dir + '../res/sols.pickle')[N_trees-1]\n",
     "        sol_list = []\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "aeb2a935",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
     }
    ],
    "source": [
-    "#find_legalized(200)"
+    "find_legalized(41)"
    ]
   },
   {
