Final commit before simplification

--- a/analysis/final_submission.ipynb
+++ b/analysis/final_submission.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 37,
    "id": "a927a9d6-cad3-401d-8b9f-6493a2c0848f",
    "metadata": {
     "tags": []
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "id": "e5ce5553",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 39,
    "id": "69d06914",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "id": "aeb2a935",
    "metadata": {},
    "outputs": [
@@ -74,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Score of generated dataframe: 68.78745905734068\n"
+      "Score of generated dataframe: 68.78063407801382\n"
      ]
     }
    ],
@@ -85,28 +85,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "c28d3486",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Score of generated dataframe: 68.78063395221811\n"
+     ]
+    }
+   ],
    "source": [
-    "# pd, scores = pack_io.solution_list_to_dataframe(sol_list, return_scores= True, print_score=True, compact=True)\n",
-    "# pd.to_csv(kgs.temp_dir + 'submission_compact.csv', index=False)"
+    "pd, scores = pack_io.solution_list_to_dataframe(sol_list, return_scores= True, print_score=True, compact=True)\n",
+    "pd.to_csv(kgs.temp_dir + 'submission.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 42,
    "id": "8baed7f2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3283522925104615"
+       "0.3283522921019727"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
