--- a/run_tests.ipynb
+++ b/run_tests.ipynb
@@ -10,31 +10,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "local\n",
-      "WARNING: CUDA MPS not active\n",
+      "Detected environment: local\n",
       "False\n",
       "init CUDA\n",
       "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
       "GPU max threads per block: 1024\n",
       "=== Compiling kernel variant: crystal ===\n",
       "Defines: ENABLE_CRYSTAL_AXES, ENABLE_OVERLAP_AREA, ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_60379.cu -o /mnt/d//packing/temp/pack_cuda_crystal_60379.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_CRYSTAL_AXES -DENABLE_OVERLAP_AREA -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_1336.cu -o /mnt/d//packing/temp/pack_cuda_crystal_1336.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 22.796 ms\n",
+      "ptxas info    : Compile time = 8.830 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 24 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 489.232 ms\n",
+      "ptxas info    : Compile time = 501.422 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1264 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 96 registers, used 1 barriers, 1264 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 934.148 ms\n",
+      "ptxas info    : Compile time = 1235.029 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [crystal] ---\n",
@@ -45,23 +44,23 @@
       "  Local memory (bytes): 1264\n",
       "=== Compiling kernel variant: no_sep ===\n",
       "Defines: ENABLE_OVERLAP_AREA\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved_60379.cu -o /mnt/d//packing/temp/pack_cuda_no_sep_60379.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_OVERLAP_AREA -cubin /mnt/d//packing/temp/pack_cuda_saved_1336.cu -o /mnt/d//packing/temp/pack_cuda_no_sep_1336.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.643 ms\n",
+      "ptxas info    : Compile time = 8.668 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 24 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 454.798 ms\n",
+      "ptxas info    : Compile time = 485.884 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    1232 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 75 registers, used 1 barriers, 1232 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 155.139 ms\n",
+      "ptxas info    : Compile time = 171.816 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [no_sep] ---\n",
@@ -72,23 +71,23 @@
       "  Local memory (bytes): 1232\n",
       "=== Compiling kernel variant: sep ===\n",
       "Defines: ENABLE_SEPARATION\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_60379.cu -o /mnt/d//packing/temp/pack_cuda_sep_60379.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -DENABLE_SEPARATION -cubin /mnt/d//packing/temp/pack_cuda_saved_1336.cu -o /mnt/d//packing/temp/pack_cuda_sep_1336.cubin\n",
       "ptxas info    : 0 bytes gmem, 1172 bytes cmem[3]\n",
       "ptxas info    : Compiling entry function 'multi_boundary_distance_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_distance_list_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 36 registers, used 1 barriers, 404 bytes cmem[0], 16 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 8.470 ms\n",
+      "ptxas info    : Compile time = 8.361 ms\n",
       "ptxas info    : Compiling entry function 'multi_boundary_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_boundary_list_total\n",
       "    240 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 1 barriers, 240 bytes cumulative stack size, 404 bytes cmem[0], 24 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 462.939 ms\n",
+      "ptxas info    : Compile time = 488.716 ms\n",
       "ptxas info    : Compiling entry function 'multi_overlap_list_total' for 'sm_89'\n",
       "ptxas info    : Function properties for multi_overlap_list_total\n",
       "    160 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 64 registers, used 1 barriers, 160 bytes cumulative stack size, 424 bytes cmem[0], 32 bytes cmem[2]\n",
-      "ptxas info    : Compile time = 164.805 ms\n",
+      "ptxas info    : Compile time = 177.850 ms\n",
       "\n",
       "\n",
       "--- Kernel: multi_overlap_list_total [sep] ---\n",
@@ -133,7 +132,7 @@
       "ptxas info    : Function properties for multi_overlap_lut_total\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 48 registers, used 1 barriers, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 12.731 ms\n",
+      "ptxas info    : Compile time = 11.288 ms\n",
       "\n",
       "Kernel multi_overlap_lut_total:\n",
       "  Registers: 48\n",
@@ -143,28 +142,28 @@
       "Detected GPU compute capability: 8.9 (arch=sm_89)\n",
       "GPU max threads per block: 1024\n",
       "=== Compiling LAP kernels ===\n",
-      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved_60379.cu -o /mnt/d//packing/temp/lap_batch_60379.cubin\n",
+      "Command: /usr/local/cuda/bin/nvcc -O3 -use_fast_math --extra-device-vectorization --ptxas-options=-v,--warn-on-spills -arch=sm_89 -cubin /mnt/d//packing/temp/lap_batch_saved_1336.cu -o /mnt/d//packing/temp/lap_batch_1336.cubin\n",
       "ptxas info    : 0 bytes gmem\n",
       "ptxas info    : Compiling entry function 'diversity_shortcut_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for diversity_shortcut_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 1 barriers, 400 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 11.036 ms\n",
+      "ptxas info    : Compile time = 8.835 ms\n",
       "ptxas info    : Compiling entry function 'compute_costs' for 'sm_89'\n",
       "ptxas info    : Function properties for compute_costs\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 29 registers, used 0 barriers, 384 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 3.099 ms\n",
+      "ptxas info    : Compile time = 3.013 ms\n",
       "ptxas info    : Compiling entry function 'auction_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for auction_kernel\n",
       "    0 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 35 registers, used 0 barriers, 412 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 6.984 ms\n",
+      "ptxas info    : Compile time = 6.269 ms\n",
       "ptxas info    : Compiling entry function 'hungarian_kernel' for 'sm_89'\n",
       "ptxas info    : Function properties for hungarian_kernel\n",
       "    1808 bytes stack frame, 0 bytes spill stores, 0 bytes spill loads\n",
       "ptxas info    : Used 40 registers, used 0 barriers, 1808 bytes cumulative stack size, 408 bytes cmem[0]\n",
-      "ptxas info    : Compile time = 15.949 ms\n",
+      "ptxas info    : Compile time = 13.870 ms\n",
       "\n",
       "\n",
       "--- Kernel: hungarian_kernel ---\n",
@@ -534,7 +533,7 @@
       "✓ Forward results match with and without gradients\n",
       "✓ All 13 cases passed, max gradient error: 5.00e-10\n",
       "✓ polygon_area test PASSED\n",
-      "KERNEL <cupy._core.raw.RawKernel object at 0x71a64e790b40>\n",
+      "KERNEL <cupy._core.raw.RawKernel object at 0x7fdae232f9c0>\n",
       "All tests passed.\n"
      ]
     }
